deploy/00-prerequisites.yaml
---
# Namespace for all tenant pods
apiVersion: v1
kind: Namespace
metadata:
  name: tenants
